--- a/index.utama.html
+++ b/index.utama.html
@@ -12,6 +12,7 @@
 <style>
   body{
     background: linear-gradient(#9a08dd 0%, #dd4c4f 40%, #7420d3 100%);
+
   }
 </style>
 
@@ -50,17 +51,17 @@
     </div>
     <div class="carousel-inner mt-0">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="/foto3.jpg" class="d-block w-100" alt="...">
+        <img src="/foto3.jpg" class="d-block w-100" alt="..." style="height: 500px;">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="/foto2.jpg" class="d-block w-100" alt="...">
+        <img src="/foto2.jpg" class="d-block w-100" alt="..." style="height: 500px;">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/foto1.jpg" class="d-block w-100" alt="...">
+        <img src="/foto1.jpg" class="d-block w-100" alt="..." style="height: 500px;">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
@@ -88,7 +89,7 @@
 <div class="container mt-5">
   <div class="row">
       <div class="col-md-6" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-          <img src="logo.pendek.jpg" alt="BedjoGSM" class="logo">
+          <img src="logo.pendek.jpg" alt="BedjoGSM" class="logo" style="height: 500px;">
       </div>
       <div class="col-md-6 g-5">
           <h3 class="section-title">Seputar Servis Handphone</h3>
