mengubah ukuran jendela web part2

--- a/index.utama.html
+++ b/index.utama.html
@@ -12,12 +12,13 @@
 <style>
   body{
     background: linear-gradient(#9a08dd 0%, #dd4c4f 40%, #7420d3 100%);
+    background-size: 100vh;
 
   }
 </style>
 
 <!--navbar-->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" >
+<nav class="navbar navbar-expand-lg navbar-light sticky-top" >
   <a class="navbar-brand" href="#"><b>BedjoGSM</b></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -89,7 +90,7 @@
 <div class="container mt-5">
   <div class="row">
       <div class="col-md-6" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-          <img src="logo.pendek.jpg" alt="BedjoGSM" class="logo" style="height: 500px;">
+          <img src="logo.pendek.jpg" alt="BedjoGSM" class="logo" style="width: 300px;" height="300px;">
       </div>
       <div class="col-md-6 g-5">
           <h3 class="section-title">Seputar Servis Handphone</h3>
@@ -112,8 +113,8 @@ dan kami juga memberikan garansi pada setiap kerusakan sesuai dengan SOP atau ke
 <div class="container mt-5">
   <div class="row">
       <!-- Card 1 -->
-      <div class="col-md-4">
-          <div class="card" data-aos="flip-left">
+      <div class="col-md-4 g-4">
+          <div class="card text-center" data-aos="flip-left">
               <img src="foto.konsul.jpg" alt="Tanyakan Kerusakan Hape-mu Disini">
               <div class="card-body" data-aos="flip-down">
                   <h5 class="card-title">Konsultasi permasalahan Handphone</h5>
@@ -121,8 +122,8 @@ dan kami juga memberikan garansi pada setiap kerusakan sesuai dengan SOP atau ke
           </div>
       </div>
       <!-- Card 2 -->
-      <div class="col-md-4">
-          <div class="card" data-aos="flip-left">
+      <div class="col-md-4 g-4">
+          <div class="card text-center" data-aos="flip-left">
               <img src="foto.servis1.jpg" alt="BedjoGSM servis handphone">
               <div class="card-body" data-aos="flip-down">
                   <h5 class="card-title">Proses servis handphone</h5>
@@ -131,8 +132,8 @@ dan kami juga memberikan garansi pada setiap kerusakan sesuai dengan SOP atau ke
           </div>
       </div>
       <!-- Card 3 -->
-      <div class="col-md-4">
-        <div class="card" data-aos="flip-left">
+      <div class="col-md-4 g-4">
+        <div class="card text-center" data-aos="flip-left">
             <img src="software.servis.jpg" alt="BedjoGSM servis handphone">
             <div class="card-body" data-aos="flip-down">
                 <h5 class="card-title">Proses servis software handphone</h5>
@@ -141,8 +142,8 @@ dan kami juga memberikan garansi pada setiap kerusakan sesuai dengan SOP atau ke
         </div>
     </div>
     <!--card 4-->
-    <div class="col-md-4 g-5">
-      <div class="card" data-aos="flip-left">
+    <div class="col-md-4 g-4">
+      <div class="card text-center" data-aos="flip-left">
           <img src="reball.jpg" alt="BedjoGSM servis handphone">
           <div class="card-body" data-aos="flip-down">
               <h5 class="card-title">Proses servis Reballing CPU handphone</h5>
