--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 <style>
 body{
     background: linear-gradient(#9a08dd 0%, #dd4c4f 40%, #7420d3 100%);
+    background-size: 100vh;
 }
 </style>
 
@@ -43,8 +44,8 @@ body{
 <!-- Main Content -->
 <div class="container mt-5">
     <div class="row">
-        <div class="col-md-6" data-aos="fade-down-right" data-aos-duration="500">
-            <img src="logo.pendek.jpg" alt="BedjoGSM" class="logo">
+        <div class="col-md-6" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+            <img src="logo.pendek.jpg" alt="BedjoGSM" class="logo" style="width: 300px;" height="300px;">
         </div>
         <div class="col-md-6 g-5">
             <h3 class="section-title">Seputar Servis Handphone</h3>
@@ -55,12 +56,12 @@ dan kami juga memberikan garansi pada setiap kerusakan sesuai dengan SOP atau ke
             </p></div>
         </div>
     </div>
-  </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
+<script>
     AOS.init();
-  </script>
+</script>
 </body>
 </html>
